--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,7 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"
-    }
-
-    "require": {
+        "php": ">=5.4.0",
         "twig/twig": "^1.0"
     }
 }
