--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
             "role": "Developer"
         }
     ],
+    "minimum-stability": "stable",
     "require": {
         "php": ">=5.4.0",
         "twig/twig": "^1.0"
