--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         {
             "name": "Ivan Cuenca",
             "email": "ivanqenk1@gmail.com",
-            "homepage": "",
+            "homepage": "https://github.com/icuenca/ringooMVC-1.0",
             "role": "Developer"
         }
     ],
